--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "anurak-kg/translation",
-    "description": "A Translation package for Laravel 5 with database and cache support",
+    "description": "A Translation package for Laravel 9 with database and cache support",
     "keywords": [
         "waavi",
         "laravel-translator",
@@ -18,13 +18,13 @@
         }
     ],
     "require": {
-        "laravel/framework": "~6.0|~7.0|^8.0",
+        "laravel/framework": "~6.0|~7.0|^8.0|^9.0",
         "doctrine/dbal": "^2.5"
     },
     "require-dev": {
-        "phpunit/phpunit" : "~9.3",
-        "orchestra/testbench": "~6.0",
-        "mockery/mockery": "^1.2.3"
+        "phpunit/phpunit" : "~8.3|~9.1",
+        "orchestra/testbench": "~4.0|~6.0",
+        "mockery/mockery": "^1.2.3|~1.3"
     },
     "autoload": {
         "psr-4": {
