--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
         }
     ],
     "require": {
-        "laravel/framework": "~6.0|~7.0|^8.0|^9.0|^10.0",
+        "laravel/framework": "~6.0|~7.0|^8.0|^9.0|^10.0|^11.0",
         "doctrine/dbal": "^2.5|^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : "~8.3|~9.1|^10.0",
-        "orchestra/testbench": "~4.0|~6.0|^7.0",
+        "phpunit/phpunit" : "~8.3|~9.1|^10.0|^11.0",
+        "orchestra/testbench": "~4.0|~6.0|^7.0|^11.0",
         "mockery/mockery": "^1.2.3|~1.3"
     },
     "autoload": {
